--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 (function () {
   "use strict";
 
-  const YOUTUBE_WATCH_URL = "https://www.youtube.com/watch?v=m-VVub8Jp_w";
+  const YOUTUBE_WATCH_URL = "https://youtu.be/m-VVub8Jp_w?si=JY8ITycIh60C3TcU;
   const YOUTUBE_EMBED_URL = "https://www.youtube.com/embed/m-VVub8Jp_w?autoplay=1&playsinline=1";
 
   // ✅ بيانات الدرس يدويًا هنا
