--- a/index.html
+++ b/index.html
@@ -1,1 +1,334 @@
-<!DOCTYPE html> <html lang="ar" dir="rtl"> <head> <meta charset="UTF-8" /> <title>تشغيل يوتيوب مع التوكن</title> <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <style> :root { --bg-main: #050816; --bg-card: radial-gradient(circle at top, #1f1f49 0, #050816 40%, #02030a 100%); --border-soft: rgba(255, 255, 255, 0.12); --accent: #ffb347; --accent-strong: #ff6b3d; --text-main: #f5f5f5; --text-muted: #a8a8c0; } * { box-sizing: border-box; } body { margin: 0; min-height: 100vh; font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; background: var(--bg-main); color: var(--text-main); display: flex; align-items: center; justify-content: center; padding: 16px; } .shell { width: 100%; max-width: 520px; border-radius: 20px; background: var(--bg-card); box-shadow: 0 20px 45px rgba(0, 0, 0, 0.75), 0 0 0 1px rgba(255, 255, 255, 0.05); padding: 20px 18px 18px; } .title { font-size: 18px; font-weight: 600; margin-bottom: 8px; text-align: center; } .subtitle { font-size: 13px; color: var(--text-muted); margin-bottom: 16px; text-align: center; } .token-label { font-size: 12px; color: var(--text-muted); margin-bottom: 6px; } .token-box { width: 100%; min-height: 54px; border-radius: 14px; background: rgba(3, 7, 30, 0.9); border: 1px solid var(--border-soft); padding: 8px 10px; font-size: 12px; line-height: 1.5; overflow-wrap: break-word; } .btn { margin-top: 18px; width: 100%; border-radius: 999px; border: none; font-size: 14px; padding: 10px 16px; display: flex; align-items: center; justify-content: center; gap: 8px; cursor: pointer; background: linear-gradient(135deg, var(--accent), var(--accent-strong)); color: #050816; font-weight: 600; box-shadow: 0 10px 24px rgba(255, 107, 61, 0.45); } .btn-secondary { margin-top: 10px; background: transparent; color: var(--text-main); border: 1px solid var(--border-soft); box-shadow: none; } .hidden { display: none; } </style> </head> <body> <div class="shell"> <!-- الصفحة الأولى --> <div id="page1"> <div class="title">تشغيل يوتيوب معنا</div> <div class="subtitle"> اضغط على الزر بالأسفل للانتقال إلى خطوة تشغيل الفيديو. </div> <div class="token-label">authToken من localStorage</div> <div id="tokenBoxPage1" class="token-box">جارِ تحميل التوكن...</div> <button id="goToPage2" class="btn"> اضغط هنا لتشغيل يوتيوب معنا ▶ </button> </div> <!-- الصفحة الثانية --> <div id="page2" class="hidden"> <div class="title">خطوة تشغيل الفيديو</div> <div class="subtitle">اختر طريقة تشغيل الفيديو</div> <div class="token-label">authToken من localStorage</div> <div id="tokenBoxPage2" class="token-box">جارِ تحميل التوكن...</div> <!-- زر Watch --> <button id="openYoutube" class="btn"> تشغيل يوتيوب (Watch) ▶ </button> <!-- ✅ زر Embed مباشر --> <button id="openYoutubeEmbedDirect" class="btn btn-secondary"> تشغيل يوتيوب (Embedded مباشر) ▶ </button> <button id="backToPage1" class="btn btn-secondary"> رجوع للصفحة السابقة </button> </div> </div> <script> (function () { const YOUTUBE_WATCH_URL = "https://www.youtube.com/watch?v=m-VVub8Jp_w"; const YOUTUBE_EMBED_URL = "https://www.youtube.com/embed/m-VVub8Jp_w?autoplay=1&playsinline=1"; function showTokenIn(elementId) { const box = document.getElementById(elementId); if (!box) return; try { const token = localStorage.getItem("authToken"); box.textContent = token ? "authToken: " + token : "لا يوجد authToken في localStorage."; } catch (e) { box.textContent = "خطأ أثناء قراءة localStorage"; } } document.addEventListener("DOMContentLoaded", function () { const page1 = document.getElementById("page1"); const page2 = document.getElementById("page2"); document.getElementById("goToPage2").onclick = function () { page1.classList.add("hidden"); page2.classList.remove("hidden"); showTokenIn("tokenBoxPage2"); }; document.getElementById("openYoutube").onclick = function () { window.location.href = YOUTUBE_WATCH_URL; }; document.getElementById("openYoutubeEmbedDirect").onclick = function () { window.location.href = YOUTUBE_EMBED_URL; }; document.getElementById("backToPage1").onclick = function () { page2.classList.add("hidden"); page1.classList.remove("hidden"); }; showTokenIn("tokenBoxPage1"); }); })(); </script> </body> </html>
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8" />
+  <title>تشغيل يوتيوب مع التوكن</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+    :root {
+      --bg-main: #050816;
+      --bg-card: radial-gradient(circle at top, #1f1f49 0, #050816 40%, #02030a 100%);
+      --border-soft: rgba(255, 255, 255, 0.12);
+      --accent: #ffb347;
+      --accent-strong: #ff6b3d;
+      --text-main: #f5f5f5;
+      --text-muted: #a8a8c0;
+    }
+    * { box-sizing: border-box; }
+    body {
+      margin: 0;
+      min-height: 100vh;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      background: var(--bg-main);
+      color: var(--text-main);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 16px;
+    }
+    .shell {
+      position: relative; /* ✅ مهم عشان زر الكلاسيك يثبت جوه الكارد */
+      width: 100%;
+      max-width: 520px;
+      border-radius: 20px;
+      background: var(--bg-card);
+      box-shadow: 0 20px 45px rgba(0, 0, 0, 0.75), 0 0 0 1px rgba(255, 255, 255, 0.05);
+      padding: 20px 18px 18px;
+    }
+
+    .title { font-size: 18px; font-weight: 600; margin-bottom: 8px; text-align: center; }
+    .subtitle { font-size: 13px; color: var(--text-muted); margin-bottom: 16px; text-align: center; }
+    .token-label { font-size: 12px; color: var(--text-muted); margin-bottom: 6px; }
+    .token-box {
+      width: 100%;
+      min-height: 54px;
+      border-radius: 14px;
+      background: rgba(3, 7, 30, 0.9);
+      border: 1px solid var(--border-soft);
+      padding: 8px 10px;
+      font-size: 12px;
+      line-height: 1.5;
+      overflow-wrap: break-word;
+    }
+    .btn {
+      margin-top: 18px;
+      width: 100%;
+      border-radius: 999px;
+      border: none;
+      font-size: 14px;
+      padding: 10px 16px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+      cursor: pointer;
+      background: linear-gradient(135deg, var(--accent), var(--accent-strong));
+      color: #050816;
+      font-weight: 600;
+      box-shadow: 0 10px 24px rgba(255, 107, 61, 0.45);
+    }
+    .btn-secondary {
+      margin-top: 10px;
+      background: transparent;
+      color: var(--text-main);
+      border: 1px solid var(--border-soft);
+      box-shadow: none;
+    }
+    .hidden { display: none; }
+
+    /* Logger بسيط */
+    .log {
+      margin-top: 12px;
+      font-size: 12px;
+      color: #cfcfe6;
+      opacity: 0.9;
+      border: 1px dashed rgba(255,255,255,0.18);
+      border-radius: 12px;
+      padding: 10px;
+      background: rgba(0,0,0,0.18);
+      max-height: 140px;
+      overflow: auto;
+      white-space: pre-wrap;
+    }
+
+    /* ✅ زر الوضع الكلاسيكي */
+    .classic-btn{
+      position: absolute;
+      top: 14px;
+      right: 14px;
+      z-index: 10;
+      border-radius: 999px;
+      border: 1px solid rgba(255,255,255,0.16);
+      background: rgba(0,0,0,0.25);
+      color: var(--text-main);
+      font-size: 12px;
+      padding: 8px 12px;
+      cursor: pointer;
+      backdrop-filter: blur(6px);
+    }
+    .classic-btn:active { transform: scale(0.98); }
+  </style>
+</head>
+
+<body>
+  <div class="shell">
+
+    <!-- ✅ زر الوضع الكلاسيكي (أعلى يمين) -->
+    <button id="classicModeBtn" class="classic-btn" type="button">الوضع الكلاسيكي</button>
+
+    <!-- الصفحة الأولى -->
+    <div id="page1">
+      <div class="title">تشغيل يوتيوب معنا</div>
+      <div class="subtitle">اضغط على الزر بالأسفل للانتقال إلى خطوة تشغيل الفيديو.</div>
+
+      <div class="token-label">authToken من localStorage</div>
+      <div id="tokenBoxPage1" class="token-box">جارِ تحميل التوكن...</div>
+
+      <button id="goToPage2" class="btn">اضغط هنا لتشغيل يوتيوب معنا ▶</button>
+
+      <div id="log1" class="log"></div>
+    </div>
+
+    <!-- الصفحة الثانية -->
+    <div id="page2" class="hidden">
+      <div class="title">خطوة تشغيل الفيديو</div>
+      <div class="subtitle">اختر طريقة تشغيل الفيديو</div>
+
+      <div class="token-label">authToken من localStorage</div>
+      <div id="tokenBoxPage2" class="token-box">جارِ تحميل التوكن...</div>
+
+      <button id="openYoutube" class="btn">تشغيل يوتيوب (Watch) ▶</button>
+      <button id="openYoutubeEmbedDirect" class="btn btn-secondary">تشغيل يوتيوب (Embedded مباشر) ▶</button>
+      <button id="backToPage1" class="btn btn-secondary">رجوع للصفحة السابقة</button>
+
+      <div id="log2" class="log"></div>
+    </div>
+
+  </div>
+
+<script>
+(function () {
+  "use strict";
+
+  const YOUTUBE_WATCH_URL = "https://www.youtube.com/watch?v=m-VVub8Jp_w";
+  const YOUTUBE_EMBED_URL = "https://www.youtube.com/embed/m-VVub8Jp_w?autoplay=1&playsinline=1";
+
+  // ✅ بيانات الدرس يدويًا هنا
+  const LESSON_CONTEXT = {
+    isInteractiveQuiz: true,
+    timelineMarkers: [
+      { name: "مقدمة", time: "00:00:10" },
+      { name: "الجزء الأول", time: "00:02:30" },
+      { name: "خلاصة", time: "00:08:15" }
+    ],
+    lessonQuizzes: [
+      { quizId: "QZ_001", appearAtSeconds: 335,  webUrl: "https://example.com/quiz/1", isCompleted: false },
+      { quizId: "QZ_002", appearAtSeconds: 440, webUrl: "https://example.com/quiz/2", isCompleted: false }
+    ]
+  };
+
+  function el(id){ return document.getElementById(id); }
+
+  function log(msg) {
+    const activeLog = el("page2").classList.contains("hidden") ? el("log1") : el("log2");
+    const line = `[${new Date().toLocaleTimeString()}] ${msg}\n`;
+    if (activeLog) activeLog.textContent = (activeLog.textContent + line).slice(-3000);
+  }
+
+  function parseTimeToSeconds(timeStr) {
+    const parts = String(timeStr || "00:00:00").split(":").map(Number);
+    if (parts.length !== 3 || parts.some(isNaN)) return 0;
+    return parts[0] * 3600 + parts[1] * 60 + parts[2];
+  }
+
+  function writeLessonContextToLocalStorage(ctx) {
+    const timeline = (ctx.timelineMarkers || []).map(m => ({
+      name: m.name || "",
+      time: m.time || "00:00:00",
+      timeInSeconds: parseTimeToSeconds(m.time)
+    }));
+
+    const quizzes = (ctx.lessonQuizzes || []).map(q => ({
+      quizId: String(q.quizId || ""),
+      appearAtSeconds: Number(q.appearAtSeconds || 0),
+      webUrl: String(q.webUrl || ""),
+      isCompleted: !!q.isCompleted
+    }));
+
+    localStorage.setItem("isInteractiveQuiz", JSON.stringify(!!ctx.isInteractiveQuiz));
+    localStorage.setItem("timelineMarkers", JSON.stringify(timeline));
+    localStorage.setItem("lessonQuizzes", JSON.stringify(quizzes));
+
+    return { ok: true, timeline, quizzes };
+  }
+
+  function notifyFlutterContextReady(payload) {
+    try {
+      if (window.flutter_inappwebview && window.flutter_inappwebview.callHandler) {
+        window.flutter_inappwebview.callHandler("lessonContextReady", payload);
+        log("✅ تم إرسال lessonContextReady لـ Flutter");
+      } else {
+        log("ℹ️ flutter_inappwebview غير موجود (تجربة متصفح عادي)");
+      }
+    } catch (e) {
+      log("⚠️ خطأ أثناء callHandler: " + (e && e.message ? e.message : e));
+    }
+  }
+
+  /* ✅ إرسال حدث classicMode لـ Flutter */
+  function notifyFlutterClassicMode(payload) {
+    try {
+      if (window.flutter_inappwebview && window.flutter_inappwebview.callHandler) {
+        window.flutter_inappwebview.callHandler("classicMode", payload);
+        log("✅ تم إرسال classicMode لـ Flutter");
+      } else {
+        log("ℹ️ flutter_inappwebview غير موجود (تجربة متصفح عادي)");
+      }
+    } catch (e) {
+      log("⚠️ خطأ أثناء classicMode callHandler: " + (e && e.message ? e.message : e));
+    }
+  }
+
+  function setTokenBoxes() {
+    const token = localStorage.getItem("authToken") || "(لا يوجد authToken)";
+    if (el("tokenBoxPage1")) el("tokenBoxPage1").textContent = token;
+    if (el("tokenBoxPage2")) el("tokenBoxPage2").textContent = token;
+  }
+
+  function showPage(pageNo) {
+    const p1 = el("page1");
+    const p2 = el("page2");
+    if (!p1 || !p2) return;
+
+    if (pageNo === 1) {
+      p1.classList.remove("hidden");
+      p2.classList.add("hidden");
+      log("⬅️ رجوع للصفحة 1");
+    } else {
+      p1.classList.add("hidden");
+      p2.classList.remove("hidden");
+      log("➡️ فتح الصفحة 2");
+    }
+    setTokenBoxes();
+  }
+
+  function prepareAndGo(url) {
+    try {
+      const result = writeLessonContextToLocalStorage(LESSON_CONTEXT);
+
+      const payload = {
+        ok: result.ok,
+        isInteractiveQuiz: LESSON_CONTEXT.isInteractiveQuiz,
+        timelineMarkers: result.timeline || [],
+        lessonQuizzes: result.quizzes || [],
+        ts: Date.now()
+      };
+
+      log("✅ تم حفظ الداتا في localStorage");
+      log("timelineMarkers=" + localStorage.getItem("timelineMarkers"));
+      log("lessonQuizzes=" + localStorage.getItem("lessonQuizzes"));
+
+      notifyFlutterContextReady(payload);
+
+      // انتقل
+      setTimeout(() => {
+        log("🚀 انتقال إلى: " + url);
+        window.location.assign(url);
+      }, 80);
+    } catch (e) {
+      log("❌ خطأ داخل prepareAndGo: " + (e && e.message ? e.message : e));
+    }
+  }
+
+  function bindHandlers() {
+    setTokenBoxes();
+    log("✅ bindHandlers اشتغل");
+
+    const classicBtn = el("classicModeBtn");
+    const goToPage2 = el("goToPage2");
+    const backToPage1 = el("backToPage1");
+    const btnWatch = el("openYoutube");
+    const btnEmbed = el("openYoutubeEmbedDirect");
+
+    // ✅ زر الكلاسيك مود
+    if (classicBtn) {
+      classicBtn.addEventListener("click", () => {
+        try {
+          localStorage.setItem("classic_mode", "true");
+          log("✅ classic_mode=true saved to localStorage");
+
+          // إخطار Flutter فورًا (أفضل من polling)
+          notifyFlutterClassicMode({ classic_mode: true, ts: Date.now() });
+        } catch (e) {
+          log("❌ classic mode error: " + (e && e.message ? e.message : e));
+        }
+      });
+    } else {
+      log("⚠️ زر classicModeBtn غير موجود");
+    }
+
+    if (goToPage2) goToPage2.addEventListener("click", () => showPage(2));
+    if (backToPage1) backToPage1.addEventListener("click", () => showPage(1));
+    if (btnWatch) btnWatch.addEventListener("click", () => prepareAndGo(YOUTUBE_WATCH_URL));
+    if (btnEmbed) btnEmbed.addEventListener("click", () => prepareAndGo(YOUTUBE_EMBED_URL));
+
+    if (!goToPage2) log("⚠️ زر goToPage2 غير موجود");
+  }
+
+  // ربط آمن (يشتغل في أغلب البيئات)
+  if (document.readyState === "loading") {
+    document.addEventListener("DOMContentLoaded", bindHandlers);
+  } else {
+    bindHandlers();
+  }
+
+  // fallback إضافي لو بيئة WebView غريبة
+  setTimeout(() => {
+    try { bindHandlers(); } catch (_) {}
+  }, 300);
+
+})();
+</script>
+
+</body>
+</html>
