--- a/index.html
+++ b/index.html
@@ -1,441 +1,200 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <title>تشغيل يوتيوب مع التوكن</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <style>
-    :root {
-      --bg-main: #050816;
-      --bg-card: radial-gradient(circle at top, #1f1f49 0, #050816 40%, #02030a 100%);
-      --border-soft: rgba(255, 255, 255, 0.12);
-      --accent: #ffb347;
-      --accent-strong: #ff6b3d;
-      --text-main: #f5f5f5;
-      --text-muted: #a8a8c0;
-    }
-    * { box-sizing: border-box; }
-    body {
-      margin: 0;
-      min-height: 100vh;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: var(--bg-main);
-      color: var(--text-main);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 16px;
-    }
-    .shell {
-      position: relative;
-      width: 100%;
-      max-width: 520px;
-      border-radius: 20px;
-      background: var(--bg-card);
-      box-shadow: 0 20px 45px rgba(0, 0, 0, 0.75), 0 0 0 1px rgba(255, 255, 255, 0.05);
-      padding: 20px 18px 18px;
-    }
+<meta charset="UTF-8" />
+<title>YouTube Fetch Flow</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    .title { font-size: 18px; font-weight: 600; margin-bottom: 8px; text-align: center; }
-    .subtitle { font-size: 13px; color: var(--text-muted); margin-bottom: 16px; text-align: center; }
-    .token-label { font-size: 12px; color: var(--text-muted); margin-bottom: 6px; }
-    .token-box {
-      width: 100%;
-      min-height: 54px;
-      border-radius: 14px;
-      background: rgba(3, 7, 30, 0.9);
-      border: 1px solid var(--border-soft);
-      padding: 8px 10px;
-      font-size: 12px;
-      line-height: 1.5;
-      overflow-wrap: break-word;
-    }
-    .btn {
-      margin-top: 18px;
-      width: 100%;
-      border-radius: 999px;
-      border: none;
-      font-size: 14px;
-      padding: 10px 16px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 8px;
-      cursor: pointer;
-      background: linear-gradient(135deg, var(--accent), var(--accent-strong));
-      color: #050816;
-      font-weight: 600;
-      box-shadow: 0 10px 24px rgba(255, 107, 61, 0.45);
-    }
-    .btn-secondary {
-      margin-top: 10px;
-      background: transparent;
-      color: var(--text-main);
-      border: 1px solid var(--border-soft);
-      box-shadow: none;
-    }
-    .hidden { display: none; }
-
-    .log {
-      margin-top: 12px;
-      font-size: 12px;
-      color: #cfcfe6;
-      opacity: 0.9;
-      border: 1px dashed rgba(255,255,255,0.18);
-      border-radius: 12px;
-      padding: 10px;
-      background: rgba(0,0,0,0.18);
-      max-height: 140px;
-      overflow: auto;
-      white-space: pre-wrap;
-    }
-
-    .classic-btn{
-      position: absolute;
-      top: 14px;
-      right: 14px;
-      z-index: 10;
-      border-radius: 999px;
-      border: 1px solid rgba(255,255,255,0.16);
-      background: rgba(0,0,0,0.25);
-      color: var(--text-main);
-      font-size: 12px;
-      padding: 8px 12px;
-      cursor: pointer;
-      backdrop-filter: blur(6px);
-    }
-    .classic-btn:active { transform: scale(0.98); }
-
-    /* ✅ عرض نتيجة الفيتش */
-    .result-box {
-      margin-top: 12px;
-      border-radius: 14px;
-      background: rgba(3, 7, 30, 0.65);
-      border: 1px solid var(--border-soft);
-      padding: 10px;
-    }
-    .result-title {
-      font-size: 12px;
-      color: var(--text-muted);
-      margin-bottom: 8px;
-    }
-    pre.json-viewer {
-      margin: 0;
-      font-size: 12px;
-      line-height: 1.5;
-      white-space: pre-wrap;
-      word-break: break-word;
-      max-height: 220px;
-      overflow: auto;
-      direction: ltr; /* JSON يبان أوضح */
-      text-align: left;
-      color: #eaeaff;
-    }
-    .small-note {
-      margin-top: 8px;
-      font-size: 11px;
-      color: var(--text-muted);
-      text-align: center;
-      opacity: 0.9;
-    }
-  </style>
+<style>
+:root{
+  --bg:#050816;
+  --card:#0b0f2a;
+  --border:rgba(255,255,255,.15);
+  --accent:#ffb347;
+  --accent2:#ff6b3d;
+  --text:#f5f5f5;
+  --muted:#a8a8c0;
+}
+*{box-sizing:border-box}
+body{
+  margin:0;
+  min-height:100vh;
+  background:var(--bg);
+  color:var(--text);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-family:system-ui;
+}
+.shell{
+  width:100%;
+  max-width:520px;
+  background:var(--card);
+  border-radius:20px;
+  padding:18px;
+  box-shadow:0 20px 40px rgba(0,0,0,.7);
+}
+.hidden{display:none}
+.title{text-align:center;font-size:18px;font-weight:600}
+.subtitle{text-align:center;font-size:13px;color:var(--muted);margin-bottom:16px}
+.btn{
+  width:100%;
+  border:none;
+  border-radius:999px;
+  padding:10px;
+  margin-top:12px;
+  font-weight:600;
+  cursor:pointer;
+  background:linear-gradient(135deg,var(--accent),var(--accent2));
+}
+.btn-secondary{
+  background:transparent;
+  color:var(--text);
+  border:1px solid var(--border);
+}
+.log{
+  margin-top:12px;
+  font-size:12px;
+  background:#00000040;
+  border:1px dashed var(--border);
+  border-radius:12px;
+  padding:10px;
+  max-height:140px;
+  overflow:auto;
+  white-space:pre-wrap;
+}
+.loader{
+  margin:20px auto;
+  width:42px;
+  height:42px;
+  border-radius:50%;
+  border:4px solid #ffffff30;
+  border-top-color:var(--accent);
+  animation:spin 1s linear infinite;
+}
+@keyframes spin{to{transform:rotate(360deg)}}
+pre{
+  background:#00000050;
+  border-radius:12px;
+  padding:10px;
+  font-size:12px;
+  max-height:280px;
+  overflow:auto;
+  direction:ltr;
+}
+</style>
 </head>
 
 <body>
-  <div class="shell">
+<div class="shell">
 
-    <button id="classicModeBtn" class="classic-btn" type="button">الوضع الكلاسيكي</button>
+<!-- PAGE 1 -->
+<div id="page1">
+  <div class="title">تشغيل يوتيوب معنا</div>
+  <div class="subtitle">الانتقال للخطوة التالية</div>
+  <button id="goPage2" class="btn">التالي ▶</button>
+  <div id="log1" class="log"></div>
+</div>
 
-    <!-- الصفحة الأولى -->
-    <div id="page1">
-      <div class="title">تشغيل يوتيوب معنا</div>
-      <div class="subtitle">اضغط على الزر بالأسفل للانتقال إلى خطوة تشغيل الفيديو.</div>
+<!-- PAGE 2 -->
+<div id="page2" class="hidden">
+  <div class="title">اختيار العملية</div>
+  <div class="subtitle">تشغيل الفيديو أو جلب بياناته</div>
 
-      <div class="token-label">authToken من localStorage</div>
-      <div id="tokenBoxPage1" class="token-box">جارِ تحميل التوكن...</div>
+  <button id="openWatch" class="btn">تشغيل يوتيوب ▶</button>
+  <button id="goFetchPage" class="btn btn-secondary">جلب بيانات الفيديو 📥</button>
+  <button id="back1" class="btn btn-secondary">رجوع</button>
 
-      <button id="goToPage2" class="btn">اضغط هنا لتشغيل يوتيوب معنا ▶</button>
+  <div id="log2" class="log"></div>
+</div>
 
-      <div id="log1" class="log"></div>
-    </div>
+<!-- PAGE 3 -->
+<div id="page3" class="hidden">
+  <div class="title">جلب بيانات الفيديو</div>
+  <div class="subtitle">يتم الآن الاتصال بـ downr</div>
 
-    <!-- الصفحة الثانية -->
-    <div id="page2" class="hidden">
-      <div class="title">خطوة تشغيل الفيديو</div>
-      <div class="subtitle">اختر طريقة تشغيل الفيديو أو اجلب بيانات الفيديو</div>
+  <div id="loader" class="loader"></div>
 
-      <div class="token-label">authToken من localStorage</div>
-      <div id="tokenBoxPage2" class="token-box">جارِ تحميل التوكن...</div>
+  <pre id="fetchResult" class="hidden"></pre>
 
-      <button id="openYoutube" class="btn">تشغيل يوتيوب (Watch) ▶</button>
-      <button id="openYoutubeEmbedDirect" class="btn btn-secondary">تشغيل يوتيوب (Embedded مباشر) ▶</button>
+  <button id="back2" class="btn btn-secondary">رجوع</button>
 
-      <!-- ✅ زر جديد لعمل Fetch من downr -->
-      <button id="fetchYoutubeData" class="btn btn-secondary">جلب بيانات الفيديو (downr) 📥</button>
+  <div id="log3" class="log"></div>
+</div>
 
-      <button id="backToPage1" class="btn btn-secondary">رجوع للصفحة السابقة</button>
-
-      <!-- ✅ مكان عرض النتيجة -->
-      <div id="fetchResult" class="result-box hidden">
-        <div class="result-title">نتيجة الفيتش</div>
-        <pre id="fetchResultPre" class="json-viewer"></pre>
-      </div>
-
-      <div class="small-note">ملاحظة: في المتصفح العادي قد يمنع CORS الطلب. داخل WebView غالباً يعمل.</div>
-
-      <div id="log2" class="log"></div>
-    </div>
-
-  </div>
+</div>
 
 <script>
-(function () {
-  "use strict";
+(() => {
+"use strict";
 
-  const YOUTUBE_WATCH_URL = "https://www.youtube.com/watch?v=m-VVub8Jp_w";
-  const YOUTUBE_EMBED_URL = "https://www.youtube.com/embed/m-VVub8Jp_w?autoplay=1&playsinline=1";
+const YOUTUBE_URL = "https://www.youtube.com/watch?v=m-VVub8Jp_w";
+const DOWNR_URL = "https://downr.org/.netlify/functions/download";
 
-  // ✅ نفس endpoint اللي في Dart
-  const DOWNR_ENDPOINT = "https://downr.org/.netlify/functions/download";
+const el = id => document.getElementById(id);
 
-  // ✅ بيانات الدرس يدويًا هنا
-  const LESSON_CONTEXT = {
-    isInteractiveQuiz: true,
-    timelineMarkers: [
-      { name: "مقدمة", time: "00:00:10" },
-      { name: "الجزء الأول", time: "00:02:30" },
-      { name: "خلاصة", time: "00:08:15" }
-    ],
-    lessonQuizzes: [
-      { quizId: "QZ_001", appearAtSeconds: 335,  webUrl: "https://example.com/quiz/1", isCompleted: false },
-      { quizId: "QZ_002", appearAtSeconds: 440, webUrl: "https://example.com/quiz/2", isCompleted: false }
-    ]
-  };
+function log(msg){
+  const page =
+    !el("page3").classList.contains("hidden") ? el("log3") :
+    !el("page2").classList.contains("hidden") ? el("log2") :
+    el("log1");
 
-  function el(id){ return document.getElementById(id); }
+  page.textContent += `[${new Date().toLocaleTimeString()}] ${msg}\n`;
+}
 
-  function log(msg) {
-    const activeLog = el("page2").classList.contains("hidden") ? el("log1") : el("log2");
-    const line = `[${new Date().toLocaleTimeString()}] ${msg}\n`;
-    if (activeLog) activeLog.textContent = (activeLog.textContent + line).slice(-3000);
+function showPage(n){
+  ["page1","page2","page3"].forEach(p=>el(p).classList.add("hidden"));
+  el("page"+n).classList.remove("hidden");
+  log("➡️ فتح الصفحة " + n);
+}
+
+async function fetchDownr(){
+  el("loader").classList.remove("hidden");
+  el("fetchResult").classList.add("hidden");
+  el("fetchResult").textContent = "";
+
+  try{
+    log("📡 POST → downr");
+    const res = await fetch(DOWNR_URL,{
+      method:"POST",
+      headers:{ "Content-Type":"application/json" },
+      body:JSON.stringify({ url:YOUTUBE_URL })
+    });
+
+    const text = await res.text();
+    let data;
+    try{ data = JSON.parse(text); }catch{ data = text; }
+
+    el("loader").classList.add("hidden");
+    el("fetchResult").classList.remove("hidden");
+    el("fetchResult").textContent =
+      JSON.stringify({ status:res.status, data },null,2);
+
+    log("✅ تم جلب البيانات بنجاح");
+
+  }catch(e){
+    el("loader").classList.add("hidden");
+    el("fetchResult").classList.remove("hidden");
+    el("fetchResult").textContent =
+      JSON.stringify({ error:e.message || e },null,2);
+    log("❌ خطأ أثناء الفيتش");
   }
+}
 
-  function parseTimeToSeconds(timeStr) {
-    const parts = String(timeStr || "00:00:00").split(":").map(Number);
-    if (parts.length !== 3 || parts.some(isNaN)) return 0;
-    return parts[0] * 3600 + parts[1] * 60 + parts[2];
-  }
+/* EVENTS */
+el("goPage2").onclick = ()=> showPage(2);
+el("back1").onclick = ()=> showPage(1);
+el("back2").onclick = ()=> showPage(2);
 
-  function writeLessonContextToLocalStorage(ctx) {
-    const timeline = (ctx.timelineMarkers || []).map(m => ({
-      name: m.name || "",
-      time: m.time || "00:00:00",
-      timeInSeconds: parseTimeToSeconds(m.time)
-    }));
+el("openWatch").onclick = ()=>{
+  log("🚀 فتح يوتيوب");
+  window.location.assign(YOUTUBE_URL);
+};
 
-    const quizzes = (ctx.lessonQuizzes || []).map(q => ({
-      quizId: String(q.quizId || ""),
-      appearAtSeconds: Number(q.appearAtSeconds || 0),
-      webUrl: String(q.webUrl || ""),
-      isCompleted: !!q.isCompleted
-    }));
-
-    localStorage.setItem("isInteractiveQuiz", JSON.stringify(!!ctx.isInteractiveQuiz));
-    localStorage.setItem("timelineMarkers", JSON.stringify(timeline));
-    localStorage.setItem("lessonQuizzes", JSON.stringify(quizzes));
-
-    return { ok: true, timeline, quizzes };
-  }
-
-  function notifyFlutterContextReady(payload) {
-    try {
-      if (window.flutter_inappwebview && window.flutter_inappwebview.callHandler) {
-        window.flutter_inappwebview.callHandler("lessonContextReady", payload);
-        log("✅ تم إرسال lessonContextReady لـ Flutter");
-      } else {
-        log("ℹ️ flutter_inappwebview غير موجود (تجربة متصفح عادي)");
-      }
-    } catch (e) {
-      log("⚠️ خطأ أثناء callHandler: " + (e && e.message ? e.message : e));
-    }
-  }
-
-  function notifyFlutterClassicMode(payload) {
-    try {
-      if (window.flutter_inappwebview && window.flutter_inappwebview.callHandler) {
-        window.flutter_inappwebview.callHandler("classicMode", payload);
-        log("✅ تم إرسال classicMode لـ Flutter");
-      } else {
-        log("ℹ️ flutter_inappwebview غير موجود (تجربة متصفح عادي)");
-      }
-    } catch (e) {
-      log("⚠️ خطأ أثناء classicMode callHandler: " + (e && e.message ? e.message : e));
-    }
-  }
-
-  function setTokenBoxes() {
-    const token = localStorage.getItem("authToken") || "(لا يوجد authToken)";
-    if (el("tokenBoxPage1")) el("tokenBoxPage1").textContent = token;
-    if (el("tokenBoxPage2")) el("tokenBoxPage2").textContent = token;
-  }
-
-  function showPage(pageNo) {
-    const p1 = el("page1");
-    const p2 = el("page2");
-    if (!p1 || !p2) return;
-
-    if (pageNo === 1) {
-      p1.classList.remove("hidden");
-      p2.classList.add("hidden");
-      log("⬅️ رجوع للصفحة 1");
-    } else {
-      p1.classList.add("hidden");
-      p2.classList.remove("hidden");
-      log("➡️ فتح الصفحة 2");
-    }
-    setTokenBoxes();
-  }
-
-  function prepareAndGo(url) {
-    try {
-      const result = writeLessonContextToLocalStorage(LESSON_CONTEXT);
-
-      const payload = {
-        ok: result.ok,
-        isInteractiveQuiz: LESSON_CONTEXT.isInteractiveQuiz,
-        timelineMarkers: result.timeline || [],
-        lessonQuizzes: result.quizzes || [],
-        ts: Date.now()
-      };
-
-      log("✅ تم حفظ الداتا في localStorage");
-      log("timelineMarkers=" + localStorage.getItem("timelineMarkers"));
-      log("lessonQuizzes=" + localStorage.getItem("lessonQuizzes"));
-
-      notifyFlutterContextReady(payload);
-
-      setTimeout(() => {
-        log("🚀 انتقال إلى: " + url);
-        window.location.assign(url);
-      }, 80);
-    } catch (e) {
-      log("❌ خطأ داخل prepareAndGo: " + (e && e.message ? e.message : e));
-    }
-  }
-
-  /* ✅ NEW: Fetch من downr وعرض النتيجة */
-  async function fetchFromDownr(url) {
-    const resultBox = el("fetchResult");
-    const resultPre = el("fetchResultPre");
-    if (resultBox) resultBox.classList.add("hidden");
-    if (resultPre) resultPre.textContent = "";
-
-    try {
-      log("📡 بدء الفيتش إلى downr...");
-      log("POST " + DOWNR_ENDPOINT);
-      log("body = " + JSON.stringify({ url }));
-
-      const res = await fetch(DOWNR_ENDPOINT, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ url })
-      });
-
-      const text = await res.text();
-
-      // حاول parse JSON
-      let data;
-      try { data = JSON.parse(text); } catch (_) { data = { raw: text }; }
-
-      if (!res.ok) {
-        log("❌ فشل الطلب: HTTP " + res.status);
-        log("Response: " + (typeof data === "string" ? data : JSON.stringify(data)));
-        if (resultBox) resultBox.classList.remove("hidden");
-        if (resultPre) resultPre.textContent = JSON.stringify({
-          ok: false,
-          status: res.status,
-          statusText: res.statusText,
-          data
-        }, null, 2);
-        return;
-      }
-
-      log("✅ نجح الطلب: HTTP " + res.status);
-
-      if (resultBox) resultBox.classList.remove("hidden");
-      if (resultPre) {
-        resultPre.textContent = JSON.stringify({
-          ok: true,
-          status: res.status,
-          data
-        }, null, 2);
-      }
-    } catch (e) {
-      log("❌ Exception في fetchFromDownr: " + (e && e.message ? e.message : e));
-      const resultBox2 = el("fetchResult");
-      const resultPre2 = el("fetchResultPre");
-      if (resultBox2) resultBox2.classList.remove("hidden");
-      if (resultPre2) {
-        resultPre2.textContent = JSON.stringify({
-          ok: false,
-          error: (e && e.message) ? e.message : String(e)
-        }, null, 2);
-      }
-    }
-  }
-
-  function bindHandlers() {
-    setTokenBoxes();
-    log("✅ bindHandlers اشتغل");
-
-    const classicBtn = el("classicModeBtn");
-    const goToPage2 = el("goToPage2");
-    const backToPage1 = el("backToPage1");
-    const btnWatch = el("openYoutube");
-    const btnEmbed = el("openYoutubeEmbedDirect");
-
-    // ✅ زر الفيتش
-    const btnFetch = el("fetchYoutubeData");
-
-    // زر الكلاسيك مود
-    if (classicBtn) {
-      classicBtn.addEventListener("click", () => {
-        try {
-          localStorage.setItem("classic_mode", "true");
-          log("✅ classic_mode=true saved to localStorage");
-          notifyFlutterClassicMode({ classic_mode: true, ts: Date.now() });
-        } catch (e) {
-          log("❌ classic mode error: " + (e && e.message ? e.message : e));
-        }
-      });
-    } else {
-      log("⚠️ زر classicModeBtn غير موجود");
-    }
-
-    if (goToPage2) goToPage2.addEventListener("click", () => showPage(2));
-    if (backToPage1) backToPage1.addEventListener("click", () => showPage(1));
-    if (btnWatch) btnWatch.addEventListener("click", () => prepareAndGo(YOUTUBE_WATCH_URL));
-    if (btnEmbed) btnEmbed.addEventListener("click", () => prepareAndGo(YOUTUBE_EMBED_URL));
-
-    // ✅ لما تضغط زر الفيتش: استخدم watch url كـ url (زي Dart)
-    if (btnFetch) {
-      btnFetch.addEventListener("click", () => fetchFromDownr(YOUTUBE_WATCH_URL));
-    } else {
-      log("⚠️ زر fetchYoutubeData غير موجود");
-    }
-
-    if (!goToPage2) log("⚠️ زر goToPage2 غير موجود");
-  }
-
-  if (document.readyState === "loading") {
-    document.addEventListener("DOMContentLoaded", bindHandlers);
-  } else {
-    bindHandlers();
-  }
-
-  setTimeout(() => {
-    try { bindHandlers(); } catch (_) {}
-  }, 300);
+el("goFetchPage").onclick = ()=>{
+  showPage(3);
+  fetchDownr(); // ✅ يبدأ الفيتش تلقائي
+};
 
 })();
 </script>
